# docs/swagger.json
@@ -57,27 +57,33 @@
                 ]
             }
         },
-        "/auth": {
-            "post": {
-                "description": "It takes a token to authenticate yorself to the application",
+        "/accounts/{id}/balance": {
+            "get": {
+                "description": "show the balance of a specific account",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get a Auth",
-                "parameters": [
-                    {
-                        "description": "Body",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
+                "summary": "account balance",
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.Login"
+                            "$ref": "#/definitions/account.AccountBalance"
                         }
+                    },
+                    "400": {
+                        "description": "Failed to decode"
+                    },
+                    "404": {
+                        "description": "Account not found"
+                    },
+                    "500": {
+                        "description": "Unexpected internal server error"
                     }
-                ]
+                }
             }
         },
         "/deposit": {
@@ -103,6 +109,29 @@
                 ]
             }
         },
+        "/login": {
+            "post": {
+                "description": "It takes a token to authenticate yourself to the application",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get a Auth",
+                "parameters": [
+                    {
+                        "description": "Body",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.Login"
+                        }
+                    }
+                ]
+            }
+        },
         "/transfer": {
             "post": {
                 "description": "Transfer between accounts. The account that will make the transfer must be authenticated with a token.",
@@ -120,7 +149,10 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/transfer.TransferInput"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entities.Transfer"
+                            }
                         }
                     },
                     {
@@ -158,6 +190,14 @@
         }
     },
     "definitions": {
+        "account.AccountBalance": {
+            "type": "object",
+            "properties": {
+                "balance": {
+                    "type": "number"
+                }
+            }
+        },
         "account.DepositInput": {
             "type": "object",
             "properties": {
@@ -222,14 +262,34 @@
                 }
             }
         },
-        "transfer.TransferInput": {
+        "entities.Transfer": {
             "type": "object",
             "properties": {
+                "accountDestinationID": {
+                    "type": "string"
+                },
+                "accountOriginID": {
+                    "type": "string"
+                },
                 "amount": {
                     "type": "number"
                 },
-                "destinationCPF": {
+                "createdAt": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.TransferInput": {
+            "type": "object",
+            "properties": {
+                "accountDestinationID": {
+                    "type": "string"
+                },
+                "amount": {
+                    "type": "number"
                 }
             }
         }
